syntax = "proto3";

package monitor;

service Monitor {
    rpc HandleHealthReport (HealthReport) returns (HealthReportReply) {}
}

message ContainerSpec {
    string image = 1;
}

message ReplicaSpec {
    map<string, ContainerSpec> containers = 1;
}

message ReplicaHealth {
    string node = 1;
    ReplicaSpec spec = 2;
    bytes status = 3;
}

message ServiceSpec {
    int32 replicas = 1;
    map<string, ContainerSpec> containers = 2;
}

message ServiceHealthReport {
    enum Kind {
        DEPLOYMENT = 0;
        DAEMONSET = 1;
    }
    Kind kind = 1;
    ServiceSpec spec = 2;
    bytes status = 3;
    map<string, ReplicaHealth> replicas = 4;
}

message HealthReport {
    string account = 1;
    string domain = 2;

    map<string, ServiceHealthReport> services = 4;
}

message HealthReportReply {
    bool ack = 1;
}